# notia

./: .gitignore  README.md  android-signing.properties.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: android-build-release.sh  android-install-release.sh  tauri-cli.sh  tauri-dev-linux.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  mobile_directory_picker.rs
src/components/common/: NotiaButton.tsx  NotiaCard.tsx
src/components/notia/: AppDialogModal.tsx  ConfirmationDialogModal.tsx  FileTree.tsx  FileTreeContextMenu.tsx  IconRail.tsx  LibraryManagerModal.tsx  MainView.tsx  NotiaMenu.tsx  NotiaModalShell.tsx  SettingsModal.tsx  TopToolbar.tsx  WindowTitleBar.tsx  WorkspaceFooter.tsx
src/constants/: notiaMenu.ts
src/context/confirmation/: ConfirmationEngine.tsx  ConfirmationEngineContext.ts  useConfirmationEngine.ts
src/engines/graph/: clusteredGraphLayoutEngine.ts  libraryGraphEngine.ts
src/engines/markdown/: frontmatterEngine.ts  wikiLinkEngine.ts
src/engines/tree/: applySearchMatchesToTree.ts
src/hooks/: useLibraryGraphData.ts  useSubmenuEngine.ts
src/modules/inkdoc/: InkDocView.ts  inkdoc.css  main.ts  settings.ts  transformers-web.d.ts
src/services/files/: filesystemEngine.ts
src/services/libraries/: libraryDocumentRuntime.ts  libraryRuntime.ts  libraryStorage.ts
src/services/preferences/: explorerPanelStorage.ts  (+2 more)
src/styles/: notia.css
src/types/: global.d.ts  notia.ts
(+106 files in other folders)
