[package]
name = "notia"
version = "1.0.1-ALPHA"
description = "Notia desktop app"
authors = ["Gabriel"]
edition = "2021"

[lib]
name = "notia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
